.sisyphus/evidence/task-6-websocket.txt
error: #[derive(RustEmbed)] folder '/home/alex/Projects/vast/frontend/dist/' does not exist. cwd: '/home/alex/Projects/vast'
  --> src/embed.rs:9:1
   |
 9 | / #[folder = "frontend/dist/"]
10 | | #[exclude = "*.map"]
11 | | struct Asset;
   | |_____________^
error[E0599]: no function or associated item named `get` found for struct `Asset` in the current scope
  --> src/embed.rs:18:18
   |
11 | struct Asset;
   | ------------ function or associated item `get` not found for this struct
...
18 |     match Asset::get(path) {
   |                  ^^^ function or associated item not found in `Asset`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following traits define an item `get`, perhaps you need to implement one of them:
           candidate #1: `Embed`
           candidate #2: `Row`
